# orion-cognitive-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  .yamllint.yml  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: cd-deploy-dev.yml  ci-python.yml  ci.yml  diag-full.yml  diag-matrix-inputs.yml  diag-matrix-only.yml  diag-matrix-static.yml  diag-nomatrix.yml  diag.yml
docs/architectural-decisions/: 0001-stack.md  0002-aws-target-bedrock-agentcore.md  0003-monorepo-coordination.md  README.md
src/orion_cognitive_agent/: __init__.py  __main__.py
src/orion_cognitive_agent/agent/: __init__.py  factory.py  middleware.py
src/orion_cognitive_agent/api/: __init__.py  app.py  server.py
src/orion_cognitive_agent/aws/: __init__.py  client.py
src/orion_cognitive_agent/config/: __init__.py  settings.py
src/orion_cognitive_agent/observability/: __init__.py  langsmith.py
src/orion_cognitive_agent/prompts/: __init__.py  coordinator.md  loader.py
src/orion_cognitive_agent/tools/: __init__.py
src/orion_cognitive_agent/tools/echo/: __init__.py  handler.py  tool.py
src/orion_cognitive_agent/utils/: __init__.py  logging.py
tests/: __init__.py  smoke.py
